--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TERE</title>
-    <!-- Fontes -->
+    <!-- Fonte Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
                     <img src="images/logo-tere.svg" alt="Logo Tere">
                 </a>
 
-                <!-- Menu -->
+                <!-- Menu de navegação -->
                 <ul class="navbar-nav d-flex align-items-center gap-4">
                     <li class="nav-item">
                         <a class="nav-link bold" href="#">Home</a>
@@ -45,6 +45,45 @@
         </nav>
     </header>
     <!-- Fim do header -->
+
+    <!-- início do main -->
+    <main>
+        <section class="download-api">
+            <div class="container">
+                <div class="row">
+                    <!-- Texto e botões de download -->
+                    <div class="col-md-6 download">
+                        <h2>DOWNLOAD APP,<br>SAVE MONEY,MAKE<br>FRIENDS!</h2>
+                        <p>Its simple and its free. Play your part in reducing <br> Carbon Footprint and help Mother
+                            Nature
+                            to <br> sustain its beauty. So what are you waiting for ?<br> Lets ride together</p>
+                        <div class="d-flex gap-3 black-btn ">
+                            <button class="download-btn"><img src="images/play-store.svg" alt="Play Store">DOWNLOAD</button>
+                            <button class="download-btn"><img src="images/app-store.svg"  alt="Api Store">DOWNLOAD</button>
+                        </div>
+
+                        <!-- Imagem ao lado direito -->
+                    </div>
+                    <div class="col-md-6 viagem">
+                        <img src="images/viagem.svg" alt="família viajando de carro">
+                    </div>
+                </div>
+
+                <!-- Caixa verde com input e button -->
+                <div class="container green-caixa">
+                    <div class="row dentro-caixa align-items-center">
+                        <div class="col-md-3">
+                            <p class="Let-link">Let’s go. Get a link <br> to download the app.</p>
+                        </div>
+                        <div class="col-md-9 d-flex align-items-center">
+                            <input type="text" class="form-control input-number"placeholder="Enter mobile phone number">
+                            <button class="apply-btn">APPLY TO DRIVE</button>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
+    <!-- Fim do main -->
 
     <!-- Scripts Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
