feat: seção How Tere Works criada e estilizada

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- início do main -->
     <main>
-        <section class="download-api">
+        <section class="download-app">
             <div class="container">
                 <div class="row">
                     <!-- Texto e botões de download -->
@@ -62,8 +62,8 @@
                             <button class="download-btn"><img src="images/app-store.svg"  alt="Api Store">DOWNLOAD</button>
                         </div>
 
-                        <!-- Imagem ao lado direito -->
                     </div>
+                    <!-- Imagem ao lado direito -->
                     <div class="col-md-6 viagem">
                         <img src="images/viagem.svg" alt="família viajando de carro">
                     </div>
@@ -81,6 +81,44 @@
                         </div>
                     </div>
                 </div>
+        </section>
+
+        <section class="how-tere-works">
+            <div class="container works">
+                <!-- Título e descrição -->
+                <div class="text-center how-tere-works">
+                    <h1>HOW <span class="green-text"> TERE </span>WORKS</h1>
+                    <p class="text-app">Download and install the tere app. Enter your phone <br> number and make your user account. when approved you <br> may start driving.</p>
+
+                </div>
+                <div class="row g-4">
+
+                     <!-- Coluna da esquerda -->
+                   <div class="col-md-4 d-flex flex-column align-items-center how-esquerda">
+                        <img class="number-one" src="images/images-works/request-a-ride-1.svg" alt="Request a Ride">
+                        <h3 class="h3-request-ride">REQUEST A RIDE</h3>
+                        <p>Have to reach office or going <br> <span class="shopping">for shopping ?</span>  <br> Just put your current location <br> and destination and search a <br> <span class="suits">ride that suits you</span> </p>
+                        <img class="number-three" src="images/images-works/instant-notifications-3.svg" alt="Instant Notifications">
+                        <h3 class="h3-instant-notifications">INSTANT NOTIFICATIONS</h3>
+                        <p>Get instant notifications for <br> your rides and be in contact <br> with fellow riders all the time</p>
+                    </div>
+
+                     <!-- Imagem central -->
+                    <div class="col-md-4 d-flex justify-content-center align-items-center ">
+                        <img class="celular" src="images/images-works/celular.svg" alt="Celular ">
+                    </div>
+
+                      <!-- Coluna da direita -->
+                    <div class="col-md-4 d-flex flex-column align-items-center how-direita">
+                        <img class="number-two" src="images/images-works/post-a-ride-2.svg" alt="Post a Ride">
+                        <h3 class="h3-post">POST A RIDE</h3>
+                        <p>Going somewhere but hate to <br> travel alone - <br>just post your ride details and <br> publish it</p>
+                        <img class="number-four" src="images/images-works/cashless-payment-4.svg" alt="Cashless payment">
+                        <h3 class="h3-cashless">CASHLESS PAYMENT</h3>
+                        <p>Payment made easy by using <br> your own Walle t - no more <br> cash to carry</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- Fim do main -->
