--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <!-- Fonte Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -54,9 +56,7 @@
                     <!-- Texto e botões de download -->
                     <div class="col-md-6 download">
                         <h2>DOWNLOAD APP,<br>SAVE MONEY,MAKE<br>FRIENDS!</h2>
-                        <p>Its simple and its free. Play your part in reducing <br> Carbon Footprint and help Mother
-                            Nature
-                            to <br> sustain its beauty. So what are you waiting for ?<br> Lets ride together</p>
+                        <p>Its simple and its free. Play your part in reducing <br> Carbon Footprint and help Mother  Nature to <br> sustain its beauty. So what are you waiting for ?<br> Lets ride together</p>
                         <div class="d-flex gap-3 black-btn ">
                             <button class="download-btn"><img src="images/play-store.svg" alt="Play Store">DOWNLOAD</button>
                             <button class="download-btn"><img src="images/app-store.svg"  alt="Api Store">DOWNLOAD</button>
@@ -86,36 +86,98 @@
         <section class="how-tere-works">
             <div class="container works">
                 <!-- Título e descrição -->
-                <div class="text-center how-tere-works">
+                <div class="text-center">
                     <h1>HOW <span class="green-text"> TERE </span>WORKS</h1>
-                    <p class="text-app">Download and install the tere app. Enter your phone <br> number and make your user account. when approved you <br> may start driving.</p>
-
+                    <p class="text-app">Download and install the tere app. Enter your phone <br>number and make your user account. when approved you <br> may start driving.</p>
                 </div>
                 <div class="row g-4">
 
-                     <!-- Coluna da esquerda -->
-                   <div class="col-md-4 d-flex flex-column align-items-center how-esquerda">
+                    <!-- Coluna da esquerda -->
+                    <div class="col-md-4 d-flex flex-column align-items-center how-esquerda">
                         <img class="number-one" src="images/images-works/request-a-ride-1.svg" alt="Request a Ride">
                         <h3 class="h3-request-ride">REQUEST A RIDE</h3>
-                        <p>Have to reach office or going <br> <span class="shopping">for shopping ?</span>  <br> Just put your current location <br> and destination and search a <br> <span class="suits">ride that suits you</span> </p>
+                        <p class="p-request-ride">Have to reach office or going <br> <span class="shopping">for shopping ?</span> <br> Just put your current location <br> and destination and search a <br> <span class="suits">ride that  suits you</span> </p>
                         <img class="number-three" src="images/images-works/instant-notifications-3.svg" alt="Instant Notifications">
                         <h3 class="h3-instant-notifications">INSTANT NOTIFICATIONS</h3>
-                        <p>Get instant notifications for <br> your rides and be in contact <br> with fellow riders all the time</p>
+                        <p class="p-instant-notifications">Get instant notifications for <br> your rides and be in contact <br> with fellow riders all the time</p>
                     </div>
 
-                     <!-- Imagem central -->
+                    <!-- Imagem central -->
                     <div class="col-md-4 d-flex justify-content-center align-items-center ">
                         <img class="celular" src="images/images-works/celular.svg" alt="Celular ">
                     </div>
 
-                      <!-- Coluna da direita -->
+                    <!-- Coluna da direita -->
                     <div class="col-md-4 d-flex flex-column align-items-center how-direita">
                         <img class="number-two" src="images/images-works/post-a-ride-2.svg" alt="Post a Ride">
                         <h3 class="h3-post">POST A RIDE</h3>
-                        <p>Going somewhere but hate to <br> travel alone - <br>just post your ride details and <br> publish it</p>
+                        <p class="p-post">Going somewhere but hate to <br> travel alone - <br>just post your ride details and <br> publish it</p>
                         <img class="number-four" src="images/images-works/cashless-payment-4.svg" alt="Cashless payment">
                         <h3 class="h3-cashless">CASHLESS PAYMENT</h3>
-                        <p>Payment made easy by using <br> your own Walle t - no more <br> cash to carry</p>
+                        <p class="p-cashless">Payment made easy by using <br> your own Walle t - no more <br> cash to carry</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="tere-benefits">
+            <div class="container">
+                <h1 class="text-center "><span class="tere-verde">TERE</span> BENEFITS</h1>
+
+                <!-- Bloco 1 -->
+                <div class="row align-items-center mb-5 bloco-1">
+                    <div class="col-md-6 d-flex gap-3">
+                        <div class="benefit-block">
+                            <div class="topo-one">
+                                <img src="images/images-benefits/01..svg" alt="01">
+                                <h2 class="benefit-title">Flexible <br> working hours</h2>
+                            </div>
+                            <p class="benefit-desc-one">You can decide when, and how much <br> time you want to drive.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <img class="img-tempo" src="images/images-benefits/corrida-contra-o-tempo.svg"
+                            alt="Imagem benefício 1">
+                    </div>
+                </div>
+
+                <!-- Bloco 2 -->
+                <div class="row align-items-center flex-row-reverse mb-5 bloco-2">
+                    <div class="col-md-6 d-flex gap-3">
+                        <div class="benefit-block">
+                            <div class="topo-two">
+                                <img src="images/images-benefits/02..svg" alt="02">
+                                <h2 class="benefit-title">Earnings</h2>
+                            </div>
+                            <p class="benefit-desc-two">By driving with tere you can <br> earn more.</p>
+                        </div>
+
+
+                    </div>
+                    <div class="col-md-6">
+                        <img class="dinheiro" src="images/images-benefits/dinheiro.svg" alt="Imagem benefício 2">
+                    </div>
+                </div>
+
+                <!-- Bloco 3 -->
+                <div class="row align-items-center mb-5 bloco-3">
+                    <div class="col-md-6 d-flex gap-3">
+                        <div class="benefit-block">
+                            <div class="topo-three">
+                                <img src="images/images-benefits/03..svg" alt="03">
+                                <h2 class="benefit-title">Customer<br>support 24/7</h2>
+                            </div>
+                            <p class="benefit-desc-three">Tere is a local service provider and we are proud to
+                                <br>support you in your local language. We are proud <br> to be at your service 24/7!
+                            </p>
+                        </div>
+                        <div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <img class="pessoa-notebook" src="images/images-benefits/pessoa-mexendo-no-notebook.svg"
+                            alt="Imagem benefício 3">
                     </div>
                 </div>
             </div>
@@ -128,4 +190,5 @@
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
