--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +19,7 @@
     <!-- link do css -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <!-- Início do header -->
     <header>
@@ -56,10 +58,11 @@
                     <!-- Texto e botões de download -->
                     <div class="col-md-6 download">
                         <h2>DOWNLOAD APP,<br>SAVE MONEY,MAKE<br>FRIENDS!</h2>
-                        <p>Its simple and its free. Play your part in reducing <br> Carbon Footprint and help Mother  Nature to <br> sustain its beauty. So what are you waiting for ?<br> Lets ride together</p>
+                        <p>Its simple and its free. Play your part in reducing <br> Carbon Footprint and help Mother
+                            Nature to <br> sustain its beauty. So what are you waiting for ?<br> Lets ride together</p>
                         <div class="d-flex gap-3 black-btn ">
-                            <button class="download-btn"><img src="images/play-store.svg" alt="Play Store">DOWNLOAD</button>
-                            <button class="download-btn"><img src="images/app-store.svg"  alt="Api Store">DOWNLOAD</button>
+                            <button class="download-btn"><img src="images/play-store.svg"alt="Play Store">DOWNLOAD</button>
+                            <button class="download-btn"><img src="images/app-store.svg" alt="Api Store">DOWNLOAD</button>
                         </div>
 
                     </div>
@@ -76,7 +79,8 @@
                             <p class="Let-link">Let’s go. Get a link <br> to download the app.</p>
                         </div>
                         <div class="col-md-9 d-flex align-items-center">
-                            <input type="text" class="form-control input-number"placeholder="Enter mobile phone number">
+                            <input type="text" class="form-control input-number"
+                                placeholder="Enter mobile phone number">
                             <button class="apply-btn">APPLY TO DRIVE</button>
                         </div>
                     </div>
@@ -88,7 +92,8 @@
                 <!-- Título e descrição -->
                 <div class="text-center">
                     <h1>HOW <span class="green-text"> TERE </span>WORKS</h1>
-                    <p class="text-app">Download and install the tere app. Enter your phone <br>number and make your user account. when approved you <br> may start driving.</p>
+                    <p class="text-app">Download and install the tere app. Enter your phone <br>number and make your
+                        user account. when approved you <br> may start driving.</p>
                 </div>
                 <div class="row g-4">
 
@@ -96,10 +101,15 @@
                     <div class="col-md-4 d-flex flex-column align-items-center how-esquerda">
                         <img class="number-one" src="images/images-works/request-a-ride-1.svg" alt="Request a Ride">
                         <h3 class="h3-request-ride">REQUEST A RIDE</h3>
-                        <p class="p-request-ride">Have to reach office or going <br> <span class="shopping">for shopping ?</span> <br> Just put your current location <br> and destination and search a <br> <span class="suits">ride that  suits you</span> </p>
-                        <img class="number-three" src="images/images-works/instant-notifications-3.svg" alt="Instant Notifications">
+                        <p class="p-request-ride">Have to reach office or going <br> <span class="shopping">for shopping
+                                ?</span> <br> Just put your current location <br> and destination and search a <br>
+                            <span class="suits">ride that suits you</span>
+                        </p>
+                        <img class="number-three" src="images/images-works/instant-notifications-3.svg"
+                            alt="Instant Notifications">
                         <h3 class="h3-instant-notifications">INSTANT NOTIFICATIONS</h3>
-                        <p class="p-instant-notifications">Get instant notifications for <br> your rides and be in contact <br> with fellow riders all the time</p>
+                        <p class="p-instant-notifications">Get instant notifications for <br> your rides and be in
+                            contact <br> with fellow riders all the time</p>
                     </div>
 
                     <!-- Imagem central -->
@@ -111,10 +121,13 @@
                     <div class="col-md-4 d-flex flex-column align-items-center how-direita">
                         <img class="number-two" src="images/images-works/post-a-ride-2.svg" alt="Post a Ride">
                         <h3 class="h3-post">POST A RIDE</h3>
-                        <p class="p-post">Going somewhere but hate to <br> travel alone - <br>just post your ride details and <br> publish it</p>
-                        <img class="number-four" src="images/images-works/cashless-payment-4.svg" alt="Cashless payment">
+                        <p class="p-post">Going somewhere but hate to <br> travel alone - <br>just post your ride
+                            details and <br> publish it</p>
+                        <img class="number-four" src="images/images-works/cashless-payment-4.svg"
+                            alt="Cashless payment">
                         <h3 class="h3-cashless">CASHLESS PAYMENT</h3>
-                        <p class="p-cashless">Payment made easy by using <br> your own Walle t - no more <br> cash to carry</p>
+                        <p class="p-cashless">Payment made easy by using <br> your own Walle t - no more <br> cash to
+                            carry</p>
                     </div>
                 </div>
             </div>
@@ -184,6 +197,45 @@
         </section>
     </main>
     <!-- Fim do main -->
+
+    <!-- Início do footer -->
+    <footer class="tere-footer">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+
+                <div class="col-md-2">
+                    <img src="images/logo-preta.svg" alt="Logo Tere" class="logo-footer">
+                </div>
+
+                <div class="col-md-3">
+                    <h3 class="footer-title">Be Our Friend</h3>
+                    <p class="footer-text">3, Season Park, Jakarta</p>
+                    <p class="footer-text">support@foodyar.co.id</p>
+                    <p class="footer-text">021 - 1111 - 2222</p>
+                </div>
+
+                <div class="col-md-3">
+                    <h3 class="footer-title">Be Our Friend</h3>
+                    <p class="footer-text">3, Season Park, Jakarta</p>
+                    <p class="footer-text">support@foodyar.co.id</p>
+                    <p class="footer-text">021 - 1111 - 2222</p>
+                </div>
+
+                <div class="col-md-4 d-flex gap-3">
+                    <button class="download-btn-footer button-footer-store"><img src="images/play-store.svg" alt="Play Store">DOWNLOAD</button>
+                    <button class="download-btn-footer"><img  src="images/app-store.svg" alt="App Store">DOWNLOAD</button>
+                </div>
+
+            </div>
+
+            <div class="linha-horizontal"></div>
+            
+            <p class="codematics text-center">
+                All Rights Reserved tere by Codematics 2022
+            </p>
+        </div>
+    </footer>
+    <!-- Fim do footer -->
 
     <!-- Scripts Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
