--- a/index.html
+++ b/index.html
@@ -23,28 +23,35 @@
 <body>
     <!-- Início do header -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
             <div class="container d-flex justify-content-between align-items-center">
                 <!-- Logo -->
                 <a class="navbar-brand logo" href="#">
                     <img src="images/logo-tere.svg" alt="Logo Tere">
                 </a>
 
-                <!-- Menu de navegação -->
-                <ul class="navbar-nav d-flex align-items-center gap-4">
-                    <li class="nav-item">
-                        <a class="nav-link bold" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link bold" href="#">How Tere Works</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link bold" href="#">Tere Benefits</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn green-btn" href="#">Help Center</a>
-                    </li>
-                </ul>
+                <!-- Botão Hamburguer -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                     <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                <!-- Links do menu -->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto gap-4">
+                        <li class="nav-item">
+                            <a class="nav-link bold" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link bold" href="#">How Tere Works</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link bold" href="#">Tere Benefits</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link btn green-btn" href="#">Help Center</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
@@ -61,8 +68,10 @@
                         <p>Its simple and its free. Play your part in reducing <br> Carbon Footprint and help Mother
                             Nature to <br> sustain its beauty. So what are you waiting for ?<br> Lets ride together</p>
                         <div class="d-flex gap-3 black-btn ">
-                            <button class="download-btn"><img src="images/play-store.svg"alt="Play Store">DOWNLOAD</button>
-                            <button class="download-btn"><img src="images/app-store.svg" alt="Api Store">DOWNLOAD</button>
+                            <button class="download-btn"><img src="images/play-store.svg"
+                                    alt="Play Store">DOWNLOAD</button>
+                            <button class="download-btn"><img src="images/app-store.svg"
+                                    alt="Api Store">DOWNLOAD</button>
                         </div>
 
                     </div>
@@ -78,7 +87,7 @@
                         <div class="col-md-3">
                             <p class="Let-link">Let’s go. Get a link <br> to download the app.</p>
                         </div>
-                        <div class="col-md-9 d-flex align-items-center">
+                        <div class="col-md-9 d-flex align-items-center dentro">
                             <input type="text" class="form-control input-number"
                                 placeholder="Enter mobile phone number">
                             <button class="apply-btn">APPLY TO DRIVE</button>
@@ -145,7 +154,7 @@
                                 <img src="images/images-benefits/01..svg" alt="01">
                                 <h2 class="benefit-title">Flexible <br> working hours</h2>
                             </div>
-                            <p class="benefit-desc-one">You can decide when, and how much <br> time you want to drive.
+                            <p class="benefit-desc-one ">You can decide when, and how much <br> time you want to drive.
                             </p>
                         </div>
                     </div>
@@ -207,29 +216,31 @@
                     <img src="images/logo-preta.svg" alt="Logo Tere" class="logo-footer">
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 abaixo-title">
                     <h3 class="footer-title">Be Our Friend</h3>
                     <p class="footer-text">3, Season Park, Jakarta</p>
                     <p class="footer-text">support@foodyar.co.id</p>
                     <p class="footer-text">021 - 1111 - 2222</p>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 abaixo-title" id="segundo-tex-footer">
                     <h3 class="footer-title">Be Our Friend</h3>
                     <p class="footer-text">3, Season Park, Jakarta</p>
                     <p class="footer-text">support@foodyar.co.id</p>
                     <p class="footer-text">021 - 1111 - 2222</p>
                 </div>
 
-                <div class="col-md-4 d-flex gap-3">
-                    <button class="download-btn-footer button-footer-store"><img src="images/play-store.svg" alt="Play Store">DOWNLOAD</button>
-                    <button class="download-btn-footer"><img  src="images/app-store.svg" alt="App Store">DOWNLOAD</button>
+                <div class="col-md-4 d-flex gap-3 buttons-footer">
+                    <button class="download-btn-footer button-footer-store"><img src="images/play-store.svg"
+                            alt="Play Store">DOWNLOAD</button>
+                    <button class="download-btn-footer"><img src="images/app-store.svg"
+                            alt="App Store">DOWNLOAD</button>
                 </div>
 
             </div>
 
             <div class="linha-horizontal"></div>
-            
+
             <p class="codematics text-center">
                 All Rights Reserved tere by Codematics 2022
             </p>
